# cleanconfig

./: .travis.yaml  .travis.yml  README.md  setup.cfg  test.py  test_shell_paths.py
cleanconfig/: cleanconfig.py
testfiles/access-esm-1.5/: config.yaml
