[metadata]
name = cleanconfig
author = Aidan Heerdegen
author-email = aidan.heerdegen@anu.edu.au
summary = Check payu config is suitable for release, free of any user specific settings
description-file = README.md
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages = 
    cleanconfig

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules = True

[entry_points]
console_scripts =
    cleanconfig=cleanconfig.cli:main_argv

[extras]
dev = 
    pytest
    sphinx
    recommonmark

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tools.pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore doc/conf.py
